# Chinh-Dinh-training

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  env.example
.docker/: connect-distributed.properties  postgres-add-de-user.sh
.github/workflows/: continuous-integration.yml  naming-policy.yml
1_Setup/: docker-compose.yml
2_TSQL/: CreateTable_Complete.sql  DeleteRecords_Complete.sql  DeleteTable_Complete.sql  Insert_Complete.sql  Sort_Complete.sql  Sort_Start.sql
3_Agg_Procedure_Functions/: Create_Index_Complete.sql  Parameters.sql  Stored_Procedure.sql  User_Functions_Complete.sql
4_Mask/: Dynamic_Mask.sql
app/: pyproject.toml  requirements.txt
app/app/: experiment.ipynb  gen_data.py  psql_connector.py  streamlit_app.py
app/tests/: conftest.py  docker-compose.yml  test_gen_data.py
connectors/: sink-db.json  sink-db.py  source-db.json  source-db.py
database-replication/: .gitignore  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  restore.sql  test-table.sql
database-replication/.docker/: postgres-add-de-user.sh
database-replication/app/: gen_data.py  psql_connector.py  requirements.txt  ui.py
database-replication/connectors/: sink-db.json  source-db.json  source-db.py
database-replication/docs/: wideworldimporters.dbml
docs/: diagram.py  wideworldimporters.dbml
learn-kafka/: .gitignore  consumer.py  docker-compose.yml  inputfile.txt  producer.py  test.txt
learn-kafka/config/: connect-standalone.properties
learn-sqlserver/1_Setup/: Makefile
learn-sqlserver/2_TSQL/: Joins_Complete.sql  (+4 more)
(+16 files in other folders)
