[project]
name = "database-replication"
version = "0.1"
description = ""
authors = ["lelouvincx dinhminhchinh3357@gmail.com"]

[project.dependencies]
Faker = "^19.6.0"
streamlit = "^1.26.0"
SQLAlchemy = "^2.0.20"
confluent-kafka = "^2.2.0"
ruff = "^0.0.287"
black = "^23.9.1"
pytest = "^7.4.2"
pytest-dependency = "^0.5.1"
pytest-ordering = "^0.6"
pytest-cov = "^4.1.0"

[tool.ruff]
# Enable rule pycodestyle
select = ["E"]
ignore = ["E501", "E101", "E402"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Maximum line length is same as black
line-length = 88
src = ["app/app"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
